{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Movement",
            "id": "551223b3-24b5-4847-954e-c1d7d405b655",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Value",
                    "id": "4644d3be-2664-4f9b-b399-ff623aff816d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Right",
                    "type": "Value",
                    "id": "75113a4d-944d-473f-baff-8db62ea8b319",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "600c4ea1-398a-432c-9c77-3dd3bd7feed1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Value",
                    "id": "cf841bc5-4f08-4e9e-ad2e-f089bafd1eec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Crouch",
                    "type": "Value",
                    "id": "4484d7fc-e6da-4ea5-ae14-37b387f30eac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "0313984e-2045-4c2a-b202-dbc5139653cc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "141089bf-9ee9-4471-b8e7-68c5dfec58c0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "654768d9-0ab9-4b32-91dc-304b872cc4be",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "f363d46d-2734-4618-82d6-036767cf9ae6",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "defd9131-942b-4cb5-bbbe-d57eaea2a4b1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "6acf0a28-9909-43cf-8d1e-4eb284a9a701",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "40fac710-408c-431d-a9aa-9a8f4b1a975a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dd7b0b7-55db-460b-99f0-2927da8f942b",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7fc7738-84fb-46d8-9c38-66069a660d8c",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraLook",
            "id": "955f2443-6a04-4460-a54a-2385a175d83a",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "Value",
                    "id": "49d79f34-65ed-4f11-81f0-4d8e5043b7a1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseY",
                    "type": "Value",
                    "id": "d0ff308b-e209-43b4-8336-ae3019d2f117",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d260f9a6-20ae-4ecd-a021-9ba874354e7c",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "968945c2-f9e1-4bf2-a15c-f855fc243694",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}